--- a/Outlet_Store_Sales_Predictions_Public.ipynb
+++ b/Outlet_Store_Sales_Predictions_Public.ipynb
@@ -2365,7 +2365,7 @@
       "source": [
         "#3. You now have tried 2 different models on your data set. You need to determine which model to implement.\n",
         "\n",
-        "-Overall, which model do you recommend? I recommend the Linear regression model the errors or the difference from the true median price vs predicted is smaller than the Decision Tree model. "
+        "-Overall, which model do you recommend? I recommend the Linear regression model. The errors or the difference from the true median price vs predicted is smaller than the Decision Tree model. "
       ],
       "metadata": {
         "id": "W4C3nt6cf4j4"
